main.tf
provider "aws" {
  version = "~> 2.0"
  region = "us-east-1"
}

provider "aws" {
  alias = "us-east-2"
  version = "~> 2.0"
  region = "us-east-2"
}

resource "aws_instance" "dev" {
  count = 3
  ami = var.amis["us-east-1"]
  instance_type = "t2.micro"
  key_name = var.keyname
  tags = {
    Name = "dev_${count.index}"
  }
  vpc_security_group_ids = [aws_security_group.acesso-ssh.id]
}

resource "aws_instance" "dev_5" {
  ami = var.amis["us-east-1"]
  instance_type = "t2.micro"
  key_name = var.keyname
  tags = {
    Name = "dev_5"
  }
  vpc_security_group_ids = [aws_security_group.acesso-ssh.id]
}

resource "aws_instance" "dev_6" {
  provider = aws.us-east-2
  ami = var.amis["us-east-2"]
  instance_type = "t2.micro"
  key_name = var.keyname
  tags = {
    Name = "dev_6"
  }
  vpc_security_group_ids = [aws_security_group.acesso-ssh-us-east-2.id]
  depends_on = [aws_dynamodb_table.dynamodb-hml]
}

resource "aws_dynamodb_table" "dynamodb-hml" {
  provider = aws.us-east-2
  name           = "GameScores"
  billing_mode   = "PAY_PER_REQUEST"
  read_capacity  = 20
  write_capacity = 20
  hash_key       = "UserId"
  range_key      = "GameTitle"

  attribute {
    name = "UserId"
    type = "S"
  }

  attribute {
    name = "GameTitle"
    type = "S"
  }
}
